--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 	<title></title>
+</head><!DOCTYPE html>
+<html>
+<head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+  <link rel="stylesheet" type="text/css" href="nweb.css">
+  <title></title>
 </head>
+<body>
+<div class="card">
+ <div class="container">
+  <h3 class="wfont">Iris</h3>
+  <h4 class="wfont">Hello<i style='font-size:24px;color:brown;' class='far' >&nbsp;&#xf256;</i></h4>
+  <h5 class="wfont">I am iris, a Virtual Assistant</h5>
+ 
+  <div class="card1">
+  <div class="container1">
+  <i class="material-icons" style="color:white; border-radius: 50%; background-color: #F06901; padding: 10px; margin-left: 1px;margin-top: -20px;">&#xe60e;</i> 
+  <p>Frequently asked questions <b style="color:#F06901">?</b></p>
+    <div class="inner_card ">
+        <ul><li>Can I reddem my FB before the original term ?</li></ul>
+      </div>
+   <div class="inner_card ">
+        <ul><li>How do I pay my Credit Card Bill?</li></ul>
+
+      </div>
+      <div class="inner_card ">
+        <ul><li>How can I get my Account Statement?</li></ul>
+      </div>
+      <div class="inner_card ">
+        <ul ><li >What is tenure of fixed Deposit?</li></ul>
+      </div>
+      <div class="bottom_block"><i class="material-icons" style="font-size: 15px;color:grey;">&#xe0bf;</i>Start a new conversion</div>
+  </div>
+  </div>
+  </div>
+</div>
+</body>
+</html>
 <body>
 
 
